styled home index and reviews index

--- a/MVCTravelReviewApp/MVCTravelReviewApp.csproj
+++ b/MVCTravelReviewApp/MVCTravelReviewApp.csproj
@@ -163,6 +163,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\homeindexstyle.css" />
+    <Content Include="Content\images\blog-2915.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
